Pad leaderboard segments